What's New for FreeImage

* : fixed
- : removed
! : changed
+ : added

Month day, 2004 - 3.5.3
+ [Herve Drolon] added support for transparency saving in ICO plugin
* [Nan Feng] fixed memory leak in FreeImage_DeleteTag (internal stuff)

November 27th, 2004 - 3.5.2
* [Herve Drolon] fixed a second bug in FreeImage_Clone function

November 26th, 2004 - 3.5.1
+ [Riley McNiff] added FreeImage_ConvertTo4Bits
* [Herve Drolon] fixed a buffer overrun with some ILBM images
* [Riley McNiff] fixed a potential problem when reading TIFF resolution info
* [Dimitar Atanasov] fixed a bug in FreeImage_Clone function
* [Dimitar Atanasov] fixed several bugs in TIFF plugin

November 1st, 2004 - 3.5.0
! FreeImage now uses libPNG 1.2.7
! FreeImage now uses libTIFF 3.7.0
! FreeImage now uses libMNG 1.0.8
! [Herve Drolon] improved TIFF LZW compression using a predictor
! [Detlev Vendt] FreeImagesPlus: corrected references to FreeImage.h and FreeImage.lib
+ [Herve Drolon] added support for loading/saving of 8-bit transparent TIFF
+ [Riley McNiff] added support for 4-bit dib in FreeImage_Paste
+ [Herve Drolon] added support for memory IO streams (see below)
+                added FreeImage_OpenMemory
+                added FreeImage_CloseMemory
+                added FreeImage_LoadFromMemory
+                added FreeImage_SaveToMemory
+                added FreeImage_TellMemory
+                added FreeImage_SeekMemory
+                added FreeImage_AcquireMemory
+                added FreeImage_GetFileTypeFromMemory
+ [Petr Pytelka] added FreeImage_GetFIFMimeType to the plugins function list
+ [Herve Drolon] added ICC profile support to JPEG plugin
+ [Herve Drolon] added support for metadata (see below)
+                added FreeImage_SetMetadata
+                added FreeImage_GetMetadata
+                added FreeImage_GetMetadataCount
+                added FreeImage_TagToString
+                added FreeImage_FindFirstMetadata
+                added FreeImage_FindNextMetadata