@@ -29,7 +29,9 @@
 // Maybe in a future release ? 
 // ==========================================================
 
+#ifdef _MSC_VER 
 #pragma warning (disable : 4786) // identifier was truncated to 'number' characters
+#endif
 
 #include "FreeImage.h"
 #include "Utilities.h"
